--- a/app/src/main/res/layout/grid_view_element_layout.xml
+++ b/app/src/main/res/layout/grid_view_element_layout.xml
@@ -15,16 +15,16 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:background="@android:color/darker_gray"
+        android:id="@+id/textView2"
+        android:layout_alignBottom="@+id/myGridImageView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:gravity="center_horizontal"
         android:text="Large Text"
         android:textColor="@android:color/white"
-        android:textStyle="italic"
-        android:id="@+id/textView2"
-        android:layout_alignBottom="@+id/myGridImageView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:textStyle="italic" />
 
 
 </RelativeLayout>
