--- a/app/src/main/res/layout/camera_layout.xml
+++ b/app/src/main/res/layout/camera_layout.xml
@@ -1,17 +1,23 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/tab2"
-    android:gravity="center"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:background="#000"
+    tools:context="com.example.arjuns.homework_03.CameraActivity">
 
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="thu"
-        android:id="@+id/textView"
-        android:layout_gravity="center_horizontal" />
-</LinearLayout>
+        android:text="Take picture"
+        android:id="@+id/button"
+        android:layout_gravity="left|top" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Record Video"
+        android:id="@+id/button2"
+        android:layout_gravity="right|top" />
+</FrameLayout>
