Video is getting displayed in the gallery. But there are duplicate tumbnails being created. Also preview is not yet done.

--- a/app/src/main/res/layout/camera_layout.xml
+++ b/app/src/main/res/layout/camera_layout.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/tab2"
-    android:background="#000"
     tools:context="com.example.arjuns.homework_03.CameraActivity">
 
 
@@ -20,5 +19,27 @@
         android:text="Record Video"
         android:id="@+id/captureVideoButton"
         android:layout_gravity="right|top" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center">
+
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="@string/discard"
+            android:id="@+id/discardButton"
+            android:layout_gravity="left|bottom" />
+
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/discardButton"
+            android:text="@string/save"
+            android:id="@+id/saveButton"
+            android:layout_gravity="right|bottom" />
+
+    </RelativeLayout>
 
 </FrameLayout>
