--- a/app/src/main/res/layout/camera_layout.xml
+++ b/app/src/main/res/layout/camera_layout.xml
@@ -20,6 +20,13 @@
         android:id="@+id/captureVideoButton"
         android:layout_gravity="right|top" />
 
+    <ImageView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:id="@+id/photoView"
+        android:layout_gravity="center"
+        android:visibility="invisible"/>
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
