--- a/app/src/main/res/layout/camera_layout.xml
+++ b/app/src/main/res/layout/camera_layout.xml
@@ -27,6 +27,13 @@
         android:layout_gravity="center"
         android:visibility="invisible"/>
 
+    <VideoView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:id="@+id/videoView"
+        android:layout_gravity="center"
+        android:visibility="invisible"/>
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
